@@ -1,5 +1,11 @@
 2009-02-09  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-object.c (totem_action_handle_key_press):
+	Patch from Robin Stocker <robin@nibor.org> to make space
+	work to play/pause in more situations (Closes: #570834)
+
+2009-02-09  Bastien Nocera  <hadess@hadess.net>
+
 	* gtk-doc.make: Remove generated file
 
 2009-02-07  Philip Withnall  <philip@tecnocode.co.uk>
